--- a/core/kevoree-library/package.json
+++ b/core/kevoree-library/package.json
@@ -1,12 +1,13 @@
 {
   "name": "kevoree-library",
-  "version": "5.0.1",
+  "version": "5.0.3",
   "description": "Kevoree Library - Generated with KMF and Kotlin JS Compiler",
-  "author": "François Fouquet <fouquet.f@gmail.com>",
+  "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-library.js",
   "keywords": [
     "kevoree",
-    "library"
+    "library",
+    "api"
   ],
   "contributors": [],
   "bugs": {
