--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-entities",
-  "version": "2.2.1",
+  "version": "3.0.0-SNAPSHOT",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
@@ -20,8 +20,8 @@
   "optionalDependencies": {},
   "dependencies": {
     "kevoree-commons": "^1.0.0",
-    "kevoree-kevscript": "^1.0.0",
-    "kevoree-library": "^1.0.0",
+    "kevoree-kevscript": "^2.0.0",
+    "kevoree-library": "^5.0.1-SNAPSHOT.0",
     "pseudoclass": "^1.0.2"
   },
   "license": "LGPL-3.0"
