--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-gen-model",
-  "version": "2.0.0-SNAPSHOT.0",
+  "version": "2.0.0",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
   "bin": {
@@ -12,7 +12,7 @@
   "dependencies": {
     "chalk": "^0.4.0",
     "kevoree-entities": "^3.0.0-SNAPSHOT",
-    "kevoree-library": "^5.0.1-SNAPSHOT.0",
+    "kevoree-library": "^5.0.3",
     "npm": "^1.4.4",
     "optimist": ">= 0.6.0"
   },
