--- a/tools/kevoree-registry-client/package.json
+++ b/tools/kevoree-registry-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-registry-client",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "API to GET/POST Kevoree model from http://registry.kevoree.org",
   "main": "index.js",
   "scripts": {
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/kevoree/kevoree-js",
   "devDependencies": {
     "chai": "^1.9.1",
-    "kevoree-library": "^5.0.1-SNAPSHOT.0"
+    "kevoree-library": "^5.0.3"
   },
   "dependencies": {
     "chalk": "^0.5.1",
