--- a/tools/grunt-kevoree/package.json
+++ b/tools/grunt-kevoree/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-kevoree",
   "description": "Automatically runs kevoree runtime (works like mvn kev:run plugin)",
-  "version": "2.0.0-SNAPSHOT",
+  "version": "3.0.0",
   "homepage": "https://github.com/kevoree/kevoree-js",
   "author": {
     "name": "Maxime Tricoire",
@@ -42,10 +42,10 @@
     "kevs"
   ],
   "dependencies": {
-    "kevoree-commons": "^1.0.0",
-    "kevoree-kevscript": "^1.0.0",
-    "kevoree-nodejs-runtime": "^2.0.0",
-    "kevoree-resolvers": "^1.0.0",
+    "kevoree-commons": "^2.0.0",
+    "kevoree-kevscript": "^2.0.0",
+    "kevoree-nodejs-runtime": "^3.0.0",
+    "kevoree-resolvers": "^2.0.0",
     "npmi": "~0.0.10"
   }
 }
