--- a/tools/grunt-kevoree/package.json
+++ b/tools/grunt-kevoree/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-kevoree",
   "description": "Automatically runs kevoree runtime (works like mvn kev:run plugin)",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "homepage": "https://github.com/kevoree/kevoree-js",
   "author": {
     "name": "Maxime Tricoire",
@@ -44,6 +44,7 @@
   "dependencies": {
     "kevoree-commons": "^2.0.0",
     "kevoree-kevscript": "^2.0.0",
+    "kevoree-library": "^5.0.4",
     "kevoree-nodejs-runtime": "^3.0.0",
     "kevoree-resolvers": "^2.0.0",
     "npmi": "~0.0.10"
