kevoree-gen-model: v2.0.5 fixes Dictionary Attribute generation when using DataType.object.XXX

--- a/tools/kevoree-gen-model/examples/fakecomp/package.json
+++ b/tools/kevoree-gen-model/examples/fakecomp/package.json
@@ -7,6 +7,7 @@
   },
   "private": true,
   "dependencies": {
-    "kevoree-entities": "^2.2.1"
+    "kevoree-entities": "^3.0.1",
+    "kevoree-library": "^5.0.4"
   }
 }
