--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-gen-model",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
   "bin": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "chalk": "^0.4.0",
     "kevoree-entities": "^3.0.0-SNAPSHOT",
+    "kevoree-kotlin": "^1.0.2",
     "kevoree-library": "^5.0.3",
     "npm": "^1.4.4",
     "optimist": ">= 0.6.0"
