--- a/core/kevoree-core/package.json
+++ b/core/kevoree-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-core",
-  "version": "4.1.2",
+  "version": "4.1.3",
   "description": "Kevoree Core",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-core.js",
@@ -17,13 +17,17 @@
     "type": "git",
     "url": "https://github.com/kevoree/kevoree-js"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "kevoree-entities": "^3.0.5",
+    "kevoree-kevscript": "^2.0.8",
+    "mocha": "^1.21.4"
+  },
   "optionalDependencies": {},
   "dependencies": {
-    "kevoree-library": "^5.0.3",
-    "kevoree-commons": "^2.0.0",
-    "async": "0.2.9",
-    "pseudoclass": "^1.0.1"
+    "kevoree-library": "^5.0.4",
+    "kevoree-commons": "^2.0.1",
+    "async": "0.9.0",
+    "pseudoclass": "^1.0.2"
   },
   "license": "LGPL-3.0"
 }
