--- a/org.kevoree.model.js/pom.xml
+++ b/org.kevoree.model.js/pom.xml
@@ -5,12 +5,12 @@
     <groupId>org.kevoree</groupId>
     <artifactId>org.kevoree.model.js</artifactId>
     <name>Kevoree :: Model :: Javascript</name>
-    <version>1.9.6</version>
+    <version>5.0.1-SNAPSHOT</version>
 
     <properties>
-        <metamodel>${basedir}/org.kevoree.mm</metamodel>
-        <kmf.version>3.0.0</kmf.version>
-        <!--<kevoree.version>3.6.8</kevoree.version>-->
+        <metamodel>${basedir}/target/metamodel/org.kevoree.mm</metamodel>
+        <kmf.version>3.5.9</kmf.version>
+        <kevoree.version>5.1.0</kevoree.version>
     </properties>
 
     <dependencies>
@@ -19,60 +19,41 @@
             <artifactId>org.kevoree.modeling.microframework</artifactId>
             <version>${kmf.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.kevoree</groupId>-->
-            <!--<artifactId>org.kevoree.model</artifactId>-->
-            <!--<version>${kevoree.version}</version>-->
-            <!--<classifier>sources</classifier>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.kevoree</groupId>
+            <artifactId>org.kevoree.model</artifactId>
+            <version>${kevoree.version}</version>
+            <classifier>sources</classifier>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-dependency-plugin</artifactId>-->
-                <!--<version>2.8</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>initialize</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>unpack</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<artifactItems>-->
-                                <!--<artifactItem>-->
-                                    <!--<groupId>org.kevoree</groupId>-->
-                                    <!--<artifactId>org.kevoree.model</artifactId>-->
-                                    <!--<version>${kevoree.version}</version>-->
-                                    <!--<classifier>sources</classifier>-->
-                                    <!--<type>jar</type>-->
-                                    <!--<outputDirectory>${basedir}/target/metamodel/</outputDirectory>-->
-                                <!--</artifactItem>-->
-                            <!--</artifactItems>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-                <!--<groupId>org.kevoree.modeling</groupId>-->
-                <!--<artifactId>org.kevoree.modeling.kotlin.generator.mavenplugin</artifactId>-->
-                <!--<version>${kmf.version}</version>-->
-                <!--<extensions>true</extensions>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>ModelGen</id>-->
-                        <!--<goals>-->
-                            <!--<goal>generate</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<ecore>${metamodel}</ecore>-->
-                            <!--<js>true</js>-->
-                            <!--<events>true</events>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.kevoree</groupId>
+                                    <artifactId>org.kevoree.model</artifactId>
+                                    <version>${kevoree.version}</version>
+                                    <classifier>sources</classifier>
+                                    <type>jar</type>
+                                    <outputDirectory>${basedir}/target/metamodel/</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.kevoree.modeling</groupId>
                 <artifactId>org.kevoree.modeling.kotlin.generator.mavenplugin</artifactId>
@@ -89,6 +70,7 @@
                             <ecore>${metamodel}</ecore>
                             <js>true</js>
                             <events>true</events>
+                            <persistence>true</persistence>
                         </configuration>
                     </execution>
                 </executions>
@@ -96,7 +78,7 @@
         </plugins>
     </build>
 
-        <scm>
+    <scm>
         <connection>scm:git:git@github.com:kevoree/kevoree-js.git</connection>
         <developerConnection>scm:git:git@github.com:kevoree/kevoree-js.git</developerConnection>
         <url>http://github.com/kevoree/kevoree-js.git</url>
