--- a/tools/kevoree-kevscript/package.json
+++ b/tools/kevoree-kevscript/package.json
@@ -1,8 +1,12 @@
 {
   "name": "kevoree-kevscript",
-  "version": "2.0.9",
+  "version": "2.1.0",
   "description": "Kevoree KevScript module - contains parser, interpreter and grammar",
-  "main": "./kevoree-kevscript.js",
+  "main": "./lib/KevScript.js",
+  "bin": {
+    "kevs2model": "./bin/kevs2model.js",
+    "model2kevs": "./bin/model2kevs.js"
+  },
   "scripts": {
     "test": "node test/test-parser.js"
   },
