--- a/tools/grunt-kevoree/package.json
+++ b/tools/grunt-kevoree/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-kevoree",
   "description": "Automatically runs kevoree runtime (works like mvn kev:run plugin)",
-  "version": "3.0.4",
+  "version": "4.0.0",
   "homepage": "https://github.com/kevoree/kevoree-js",
   "author": {
     "name": "Maxime Tricoire",
@@ -43,10 +43,9 @@
   ],
   "dependencies": {
     "kevoree-commons": "^2.1.0",
-    "kevoree-kevscript": "^2.0.9",
+    "kevoree-kevscript": "^2.1.3",
     "kevoree-library": "^5.0.4",
-    "kevoree-nodejs-runtime": "^3.0.8",
     "kevoree-resolvers": "^2.0.2",
-    "npmi": "~0.0.12"
+    "npmi": "0.0.12"
   }
 }
