--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-entities",
-  "version": "5.2.0",
+  "version": "6.0.0-alpha",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
@@ -19,9 +19,9 @@
   "devDependencies": {},
   "optionalDependencies": {},
   "dependencies": {
-    "kevoree-commons": "^2.0.0",
-    "kevoree-kevscript": "^2.0.0",
-    "kevoree-library": "^5.0.1-SNAPSHOT.0",
+    "kevoree-commons": "^2.1.0",
+    "kevoree-kevscript": "^2.1.3",
+    "kevoree-library": "^5.0.4",
     "pseudoclass": "^1.0.2"
   },
   "license": "LGPL-3.0"
