--- a/core/kevoree-resolvers/package.json
+++ b/core/kevoree-resolvers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-resolvers",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "Standard Kevoree Javascript resolvers",
   "main": "./kevoree-resolvers.js",
   "scripts": {
@@ -23,11 +23,11 @@
   },
   "homepage": "https://github.com/kevoree/kevoree-js",
   "dependencies": {
-    "async": "^0.6.2",
-    "kevoree-commons": "^2.0.0",
-    "kevoree-library": "^5.0.3",
-    "npm": "^1.4.16",
+    "async": "^0.9.0",
+    "kevoree-commons": "^2.1.0",
+    "kevoree-library": "^5.0.4",
+    "npm": "^2.1.5",
     "npm-vers": "^0.1.0",
-    "npmi": "~0.0.11"
+    "npmi": "^0.1.1"
   }
 }
