--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-gen-model",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
   "bin": {
@@ -10,16 +10,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "chalk": "^0.4.0",
-    "kevoree-entities": "^3.0.0-SNAPSHOT",
+    "chalk": "^0.5.1",
+    "kevoree-entities": "^6.0.0-alpha",
     "kevoree-kotlin": "^1.0.2",
-    "kevoree-library": "^5.0.3",
-    "npm": "^1.4.4",
-    "optimist": ">= 0.6.0"
+    "kevoree-library": "^5.0.4",
+    "npm": "^2.1.5",
+    "optimist": ">=0.6.1"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
-    "pseudoclass": "0.2.6"
+    "chai": "^1.9.2",
+    "pseudoclass": "1.0.2"
   },
   "repository": {
     "type": "git",
