kevoree-gen-model: v2.0.8 bugfix in package generation

--- a/tools/kevoree-gen-model/examples/fakecomp/package.json
+++ b/tools/kevoree-gen-model/examples/fakecomp/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "./FakeComp.js",
   "kevoree": {
-    "package": "org.kevoree.library.js"
+    "package": "tldpkg"
   },
   "private": true,
   "dependencies": {
