--- a/tools/grunt-kevoree/package.json
+++ b/tools/grunt-kevoree/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-kevoree",
   "description": "Automatically runs kevoree runtime (works like mvn kev:run plugin)",
-  "version": "5.0.1",
+  "version": "5.0.2",
   "homepage": "https://github.com/kevoree/kevoree-js",
   "author": {
     "name": "Maxime Tricoire",
@@ -46,6 +46,6 @@
     "kevoree-kevscript": "^2.1.3",
     "kevoree-library": "^5.0.4",
     "kevoree-resolvers": "^2.0.2",
-    "npmi": "0.1.1"
+    "npmi": "^0.1.2"
   }
 }
