--- a/tools/grunt-kevoree/package.json
+++ b/tools/grunt-kevoree/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-kevoree",
   "description": "Automatically runs kevoree runtime (works like mvn kev:run plugin)",
-  "version": "5.1.0",
+  "version": "5.1.1",
   "homepage": "https://github.com/kevoree/kevoree-js",
   "author": {
     "name": "Maxime Tricoire",
@@ -42,6 +42,7 @@
     "kevs"
   ],
   "dependencies": {
+    "async": "^0.9.0",
     "kevoree-commons": "^2.1.0",
     "kevoree-kevscript": "^2.1.3",
     "kevoree-library": "^5.0.4",
