--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -1,12 +1,16 @@
 {
   "name": "kevoree-entities",
-  "version": "8.0.0-SNAPSHOT",
+  "version": "8.0.0-SNAPSHOT.1",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
   "keywords": [
     "kevoree",
-    "entities"
+    "api",
+    "component",
+    "channel",
+    "group",
+    "node"
   ],
   "contributors": [],
   "bugs": {
