--- a/core/kevoree-library/package.json
+++ b/core/kevoree-library/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "chai": "^1.9.1",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.3.0",
     "tmp": "0.0.24"
   },
   "optionalDependencies": {},
