--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "libraries/node/javascript"]
 	path = libraries/node/javascript
 	url = https://github.com/kevoree/kevoree-js-node-javascript
+[submodule "libraries/comp/consoleprinter"]
+	path = libraries/comp/consoleprinter
+	url = https://github.com/kevoree/kevoree-js-comp-consoleprinter
