--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "libraries/group/ws"]
 	path = libraries/group/ws
 	url = https://github.com/kevoree/kevoree-js-group-ws
+[submodule "libraries/group/remotews"]
+	path = libraries/group/remotews
+	url = https://github.com/kevoree/kevoree-js-group-remotews
