--- a/runtimes/nodejs/package.json
+++ b/runtimes/nodejs/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "kevoree-core",
+  "name": "kevoree-js",
   "version": "1.0.0",
-  "description": "Kevoree core",
-  "main": "build/main/Core.js",
+  "description": "Kevoree Node.js runtime",
+  "main": "build/main/kevoree.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "kevoree",
-    "core"
+    "runtime"
   ],
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
-  "license": "LGPL-3.0",
-  "dependencies": {
-    "kevoree-library": "^5.0.9"
-  }
+  "license": "LGPL-3.0"
 }
