--- a/libs/nodes/javascript/tsconfig.json
+++ b/libs/nodes/javascript/tsconfig.json
@@ -6,9 +6,9 @@
         "isolatedModules": false,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+        "declaration": false,
         "noImplicitAny": true,
         "removeComments": true,
-        "declaration": false,
         "noLib": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
@@ -20,19 +20,12 @@
         "!./node_modules/**/*"
     ],
     "files": [
-        "./src/main/annotations/annotations.ts",
-        "./src/main/kevoree-api.d.ts",
-        "./src/main/kevoree-api.ts",
-        "./src/main/services/LoggerService.ts",
-        "./src/main/services/ModelService.ts",
+        "./src/main/JavascriptNode.ts",
         "./src/test/ModelServiceImpl.ts",
-        "./src/test/MyComp.ts",
-        "./src/test/MyOtherComp.ts",
-        "./src/test/test-modelgen.ts",
-        "./src/test/test-newInstance.ts",
+        "./src/test/test.ts",
+        "./typings/kevoree-api/kevoree-api.d.ts",
         "./typings/kevoree-logger/kevoree-logger.d.ts",
-        "./typings/node/node.d.ts",
-        "./typings/ts-injector/ts-injector.d.ts",
-        "./typings/tsd.d.ts"
+        "./typings/kevoree-util/kevoree-util.d.ts",
+        "./typings/ts-injector/ts-injector.d.ts"
     ]
 }
