--- a/libs/mycomp/package.json
+++ b/libs/mycomp/package.json
@@ -1,6 +1,9 @@
 {
   "name": "kevoree-comp-mycomp",
   "version": "1.0.0",
+  "kevoree": {
+    "namespace": "kevoree"
+  },
   "description": "Kevoree Comp",
   "main": "build/main/MyComp.js",
   "scripts": {
