--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "reflect-metadata": "^0.1.0"
   },
+  "typescript": {
+    "definitions": "src/main/kevoree-api.d.ts"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
