--- a/model/package.json
+++ b/model/package.json
@@ -2,13 +2,11 @@
   "name": "kevoree-model",
   "version": "6.0.0-alpha",
   "description": "Kevoree model generated with KMFv4 using org.kevoree.mm v6\"",
-  "main": "build/main/kevoree-model.js",
+  "main": "built/main/kevoree-model.js",
+  "typings": "built/main/kevoree-model.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "typescript": {
-    "definitions": "src/decl/kevoree-model.d.ts"
-  },
-  "author": "",
-  "license": "ISC"
+  "author": "Maxime Tricoire <max.tricoire@gmail.com>",
+  "license": "LGPL-3.0"
 }
