--- a/model/tsconfig.json
+++ b/model/tsconfig.json
@@ -1,29 +1,26 @@
 {
-    "version": "1.5.0-beta",
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
+        "moduleResolution": "node",
         "isolatedModules": false,
-        "jsx": "react",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "declaration": false,
+        "declaration": true,
         "noImplicitAny": false,
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
-        "outDir": "build"
+        "outDir": "built"
     },
     "filesGlob": [
-        "./src/**/*.ts",
-        "!./src/decl/**/*.ts",
-        "./typings/**/*.d.ts",
-        "!./node_modules/**/*"
+        "src/**/*.ts",
+        "typings/**/*.d.ts"
     ],
     "files": [
-        "./src/main/kevoree-model.ts",
-        "./src/test/test.ts",
-        "./typings/mocha/mocha.d.ts"
+        "src/main/kevoree-model.ts",
+        "src/test/test.ts",
+        "typings/mocha/mocha.d.ts"
     ]
 }
