--- a/libs/comps/ticker/tsconfig.json
+++ b/libs/comps/ticker/tsconfig.json
@@ -1,29 +1,23 @@
 {
-    "version": "1.5.0-beta",
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "isolatedModules": false,
+        "moduleResolution": "node",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "declaration": false,
         "noImplicitAny": true,
         "removeComments": true,
-        "noLib": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
-        "outDir": "build"
+        "outDir": "built"
     },
     "filesGlob": [
-        "./src/**/*.ts",
-        "./typings/**/*.ts",
-        "!./node_modules/**/*"
+        "src/**/*.ts"
     ],
     "files": [
-        "./src/main/Ticker.ts",
-        "./src/test/test.ts",
-        "./typings/kevoree-model/kevoree-model.d.ts",
-        "./typings/node/node.d.ts",
-        "./typings/tsd.d.ts"
+        "src/main/Ticker.ts",
+        "src/test/ContextServiceImpl.ts",
+        "src/test/ModelServiceImpl.ts",
+        "src/test/test.ts"
     ]
 }
