add OutputPort interface to api

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -35,6 +35,9 @@
         "src/main/Callback.ts",
         "src/main/DataType.ts",
         "src/main/kevoree-api.ts",
+        "src/main/OutputPort.ts",
+        "src/main/port/OutputPort.ts",
+        "src/main/port/OutputPortImpl.ts",
         "src/main/services/ContextService.ts",
         "src/main/services/Injectables.ts",
         "src/main/services/ModelService.ts",
