--- a/libs/comps/ticker/tsconfig.json
+++ b/libs/comps/ticker/tsconfig.json
@@ -18,6 +18,7 @@
         "src/main/Ticker.ts",
         "src/test/ContextServiceImpl.ts",
         "src/test/ModelServiceImpl.ts",
+        "src/test/OutputPortImpl.ts",
         "src/test/test.ts"
     ]
 }
