--- a/core/package.json
+++ b/core/package.json
@@ -5,7 +5,7 @@
   "main": "built/main/kevoree-core.js",
   "typings": "built/main/kevoree-core.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha built/test/test.js"
   },
   "typescript": {
     "definitions": "src/main/kevoree-core.d.ts"
