--- a/model/package.json
+++ b/model/package.json
@@ -2,8 +2,8 @@
   "name": "kevoree-model",
   "version": "6.0.0-alpha",
   "description": "Kevoree model generated with KMFv4 using org.kevoree.mm v6\"",
-  "main": "built/main/kevoree-model.js",
-  "typings": "built/main/kevoree-model.d.ts",
+  "main": "built/main/model.js",
+  "typings": "built/main/model.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
