--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
   "typings": "built/main/kevoree-api.d.ts",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha built/test"
   },
   "keywords": [
     "kevoree",
