--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -15,35 +15,43 @@
         "outDir": "built"
     },
     "filesGlob": [
-        "src/**/*.ts"
+        "src/**/*.ts",
+        "typings/**/*.d.ts"
     ],
     "files": [
         "src/main/annotations/Channel.ts",
         "src/main/annotations/Component.ts",
         "src/main/annotations/Group.ts",
         "src/main/annotations/Input.ts",
-        "src/main/annotations/metas/MetaData.ts",
-        "src/main/annotations/metas/ParamData.ts",
+        "src/main/annotations/metas/ChoiceParamMeta.ts",
+        "src/main/annotations/metas/LifecycleMeta.ts",
         "src/main/annotations/metas/ParamMeta.ts",
+        "src/main/annotations/metas/StringParamMeta.ts",
         "src/main/annotations/metas/TypeMeta.ts",
         "src/main/annotations/Node.ts",
         "src/main/annotations/Output.ts",
-        "src/main/annotations/Param.ts",
+        "src/main/annotations/params/ChoiceParam.ts",
+        "src/main/annotations/params/StringParam.ts",
         "src/main/annotations/Start.ts",
         "src/main/annotations/Stop.ts",
         "src/main/annotations/Update.ts",
+        "src/main/api/Node.ts",
+        "src/main/api/OutputPort.ts",
         "src/main/Callback.ts",
         "src/main/DataType.ts",
         "src/main/kevoree-api.ts",
-        "src/main/OutputPort.ts",
-        "src/main/port/OutputPort.ts",
-        "src/main/port/OutputPortImpl.ts",
+        "src/main/MetaData.ts",
         "src/main/services/ContextService.ts",
         "src/main/services/Injectables.ts",
         "src/main/services/ModelService.ts",
         "src/main/TypeEnum.ts",
         "src/main/util/lifecycleMethod.ts",
         "src/main/util/typeDefinition.ts",
-        "src/test/test.ts"
+        "src/test/lifecycle.ts",
+        "src/test/params.ts",
+        "src/test/types.ts",
+        "typings/mocha/mocha.d.ts",
+        "typings/node/node.d.ts",
+        "typings/tsd.d.ts"
     ]
 }
