--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -47,9 +47,10 @@
         "src/main/TypeEnum.ts",
         "src/main/util/lifecycleMethod.ts",
         "src/main/util/typeDefinition.ts",
-        "src/test/lifecycle.ts",
+        "src/test/lifecycles.ts",
         "src/test/params.ts",
         "src/test/types.ts",
+        "src/test/inputs.ts",
         "typings/mocha/mocha.d.ts",
         "typings/node/node.d.ts",
         "typings/tsd.d.ts"
